add baidu statistics

--- a/index.html
+++ b/index.html
@@ -12,5 +12,14 @@
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
 </body>
+<script>
+    var _hmt = _hmt || [];
+    (function () {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?d6743d2123d8bf5bcaf566473f2ba57d";
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(hm, s);
+    })();
+</script>
 
 </html>
