--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="renderer" content="webkit" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/favicon.gif" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Xiaobai World</title>
 </head>
